Fixed dashboard widget spacing, added widgets for no plants

--- a/plantmonitoring_frontend/src/app/pages/dashboard/dashboard.component.scss
+++ b/plantmonitoring_frontend/src/app/pages/dashboard/dashboard.component.scss
@@ -12,6 +12,36 @@
   }
 }
 
+.spacer {
+  // hide on mobile
+  display: none; 
+
+  // show on desktop
+  @media (min-width: 768px) {
+    display: block; 
+    grid-column: span var(--col-span, 1); 
+  }
+}
+
+.noplants {
+  // 1 column on mobile
+  grid-column: 1 / -1; 
+  
+  background: rgba(177, 177, 177, 0.144); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #444;
+  border-radius: 12px;
+  border: 1px dashed #c0c0c0b4;
+  min-height: 100px; // Ensure it has some height
+
+  // show on desktop
+  @media (min-width: 768px) {
+    grid-column: span var(--col-span, 1); 
+  }
+}
+
 .widget-card {
   background: var(--bg-color-light);
   border-radius: 12px;
